--- a/params/vn200.yaml
+++ b/params/vn200.yaml
@@ -1,5 +1,5 @@
 # Defined in udev rules, change according to your system. Typically /dev/ttyUSB0
-serial_port: /dev/ttyUSB0
+serial_port: /dev/ttyUSB1
 
 # Acceptable baud rates : 9600, 19200, 38400, 57600, 115200, 230400, 460800, 921600
 # Datasheet states 128000 works but from experiments it does not.
@@ -7,18 +7,21 @@ serial_baud: 921600
 
 # Acceptable data rates in Hz: 1, 2, 4, 5, 10, 20, 25, 40, 50, 100, 200
 # Baud rate must be able to handle the data rate
-async_output_rate: 40
+async_output_rate: 200
 
 # Acceptable imu rates in Hz: 1, 2, 4, 5, 10, 20, 25, 40, 50, 100, 200
 # If not defined, will be equal to async_output_rate
-imu_output_rate: 40
+imu_output_rate: 200
 
 # Device IMU Rate as set by the manufacturer (800Hz unless specified otherwise)
 # This value is used to set the serial data packet rate
-fixed_imu_rate: 800
+fixed_imu_rate: 400
+
+# Sync Out Skip Factor, set to 0 by default
+sync_out_skip_count: 19
 
 # Frame id to publish data in
-frame_id: Vectornav
+frame_id: vectornav
 
 # Data publication form, true for East North Up or false for North East Down <- false is default setting
 tf_ned_to_enu: false
@@ -28,6 +31,16 @@ tf_ned_to_enu: false
 # Proper method is to rotate the quaternion by multiplication
 # If tf_ned_to_enu = true and frame_based_enu = true we rotate the quaternion to the frame matched label by multiplication
 frame_based_enu: false
+
+antenna_a_offset_x: +0.000
+antenna_a_offset_y: -0.540
+antenna_a_offset_z: +0.000
+antenna_ab_offset_x: 0.00
+antenna_ab_offset_y: 1.080
+antenna_ab_offset_z: 0.00
+antenna_ab_uncert_x: 0.00
+antenna_ab_uncert_y: 0.00
+antenna_ab_uncert_z: 0.00
 
 # Make sure all covariances below are of type xx.xx , i.e. double so that the rpc is parsed correctly
 
